--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
 body {
     color: var(--primary-text-color);
     background-color: var(--backgroundd-color);
-    font-family: Roboto, font;
+    font-family: Roboto, serif;
         font-weight: 400;
         font-size: 16px;
         line-height: 1.5;
@@ -19,10 +19,10 @@ body {
     color: var(--title-text-color);
 }
 .header-logo {
-    font-family: Raleway,;
+    font-family: Raleway, sans-serif;
         font-weight: 800;
         font-size: 18px;
-        line-height: 1.7;
+        line-height: 1.2;
         letter-spacing: 0.03em;
 }
 .header-logo:hover,
@@ -54,11 +54,20 @@ nav.item {
 
 .hero-title {
     color: var(--background-color);
+    font-weight: 700;
+        font-size: 56px;
+        line-height: 1.1;
+        text-align: center;
 }
 
 .hero-btn {
     color: var(--background-color);
     background-color: var(--accent-color);
+    font-family: Roboto, serif;
+    font-weight: 500;
+        display: flex;
+        align-items: center;
+        letter-spacing: 0.04em;
 }
 .hero-btn:hover,
 .hero-btn:focus {
@@ -69,18 +78,34 @@ nav.item {
 /* about us */
 .info-title {
     color: var(--title-text-color);
+    font-weight: 500;
+        font-size: 20px;
+        line-height: 1.2;
 }
 /* works section */
 .works-title {
     color:var(--title-text-color);
+    font-weight: 700;
+        font-size: 36px;
+        line-height: 1.1;
+        text-align: center;
+        text-transform: capitalize;
 }
 
 /* Team */
 .team-title {
     color: var(--title-text-color);
+    font-weight: 700;
+        font-size: 36px;
+        line-height: 1.1;
+        text-align: center;
+        text-transform: capitalize;
 }
 .team-list-title {
     color:var(--title-text-color);
+    font-weight: 500;
+        font-size: 20px;
+        line-height: 1.2;
 }
 
 /* Footer */
@@ -94,7 +119,12 @@ nav.item {
 }
 
 .footer-logo {
-    color:#F4F4FD
+    color:#F4F4FD;
+    font-family: Raleway, sans-serif;
+        font-weight: 800;
+        font-size: 18px;
+        line-height: 1.2;
+        letter-spacing: 0.03em;
 }
 .footer-logo:hover,
 .footer-logo:focus {
