--- a/css/styles.css
+++ b/css/styles.css
@@ -11,8 +11,8 @@
 }
 body {
     color: var(--primary-text-color);
-    background-color: var(--backgroundd-color);
-    font-family: Roboto, serif;
+    background-color: var(--background-color);
+    font-family: Roboto, sans-serif;
         font-weight: 400;
         font-size: 16px;
         line-height: 1.5;
