--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,7 @@ body {
 /* header */
 .list {
     color: var(--title-text-color);
+    list-style: none ;
 }
 .header-logo {
     color: var(--accent-color);
