--- a/css/styles.css
+++ b/css/styles.css
@@ -42,18 +42,20 @@ body {
 }
 .nav-item:hover,
 .nav-item:focus {
-color:var(--accent-color)
+color:var(--accent-color);
 }
 nav.item {
         font-weight: 500;
+        color: var(--title-text-color);
 }
 .contacts-link {
     color: var(--primary-text-color);
+    font-style: normal;
 }
 .contacts-link:hover,
 .contacts-link:focus {
     color: var(--accent-color);
-   background-color: (var(--background-color))
+    background-color: var(--background-color);
 }
 /* hero */
 .hero {
