--- a/css/styles.css
+++ b/css/styles.css
@@ -163,7 +163,7 @@ nav.item, link {
     color: var(--accent-color);
     font-family: Roboto, sans-serif;
     font-weight: 500;
-        font-size: 16;
+        font-size: 16px;
         line-height: 1.5;
         display: flex;
         align-items: center;
