--- a/css/styles.css
+++ b/css/styles.css
@@ -176,3 +176,9 @@ nav.item, link {
     background-color: var(--ocean-color);
     color: var(--background-color);
 }
+.portfolio-list-title {
+    font-weight: 500;
+    font-size: 20px;
+    letter-spacing: 0.02em;
+    color: var(--title-text-color)
+}
