--- a/css/styles.css
+++ b/css/styles.css
@@ -180,5 +180,10 @@ nav.item, link {
     font-weight: 500;
     font-size: 20px;
     letter-spacing: 0.02em;
-    color: var(--title-text-color)
+    color: var(--title-text-color);
+}
+.portfolio-text {
+    color: var(--primary-text-color);
+    font-size: 16px;
+    line-height: 1.5;
 }
