--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@
 body {
     color: var(--primary-text-color);
     background-color: var(--background-color);
-    font-family: Roboto, sans-serif;
+    font-family: Roboto, serif;
         font-weight: 400;
         font-size: 16px;
         line-height: 1.5;
@@ -26,13 +26,13 @@ body {
 }
 .header-logo {
     color: var(--accent-color);
-    font-family: Raleway, sans-serif;
+        font-family: Raleway, sans-serif;
         font-weight: 800;
         font-size: 18px;
         line-height: 1.17;
         letter-spacing: 0.03em;
         text-transform: uppercase;
-}
+    }
 .logo-part:hover,
 .logo-part:focus {
     color:var(--accent-color);
@@ -44,9 +44,12 @@ body {
 .nav-item:focus {
 color:var(--accent-color);
 }
-nav.item, link {
+nav.item {
         font-weight: 500;
         color: var(--title-text-color);
+}
+.contacts-list {
+    font-style: normal;
 }
 .contacts-link {
     color: var(--primary-text-color);
@@ -158,8 +161,9 @@ nav.item, link {
         line-height: 1.2;
         letter-spacing: 0.02em;
 }
+
 .portfolio-btn {
-    background-color: #F4F4FD;
+    background-color: var(--secondary-white-color);
     color: var(--accent-color);
     font-family: Roboto, sans-serif;
     font-weight: 500;
@@ -186,4 +190,5 @@ nav.item, link {
     color: var(--primary-text-color);
     font-size: 16px;
     line-height: 1.5;
+    letter-spacing: 0.02em;
 }
